# microstation

./: .flake8  .gitignore  BUILD.md  Product.wxs  README.md  bt_test.py  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: build_nuitka.yml  build_nuitka_ubuntu.yml  build_nuitka_windows.yml  lint.yml
microstation/: __init__.py  __main__.py  config.py  daemon.py  dev-requirements.txt  devices.py  enums.py  gui.py  model.py  paths.py  plugin_api.py  requirements.txt  utils.py  version.py
microstation/actions/: auto_activaters.py  auto_activators.py  signals_slots.py
microstation/arduino/: arduino.ino
microstation/devices/: button.py  led.py  potentiometer.py  rgb.py  rotary_encoder.py
microstation/external_styles/: LICENSES.md
microstation/icons/: icons.qrc
microstation/langs/: microstation_de_DE.ts  microstation_en_US.ts
microstation/ui/: about.ui  component_editor.ui  create_component.ui  install_boards.ui  licenses.ui  macro_action_editor.ui  macro_editor.ui  microcontroller_settings.ui  profile_editor.ui  profiles.ui  serial_monitor.ui  settings.ui  welcome.ui  window.ui
notes/: Arduino-CLI.md
scripts/: build_linux_x86_64.sh  build_macos_x86_64.sh  build_windows_x86_64.ps1  build_windows_x86_64.sh  bump_version.py  compile-icons.ps1  compile-icons.sh  compile-langs.ps1  compile-langs.sh  compile-styles.ps1  compile-styles.sh  compile-ui.ps1  compile-ui.sh  update-langs.ps1  update-langs.sh
